@@ -129,15 +129,14 @@ defmodule SlackAdapter.Attachments do
       cond do
         success && failed ->
           """
-          :boom: `#{branch}` 브랜치 빌드가 깨져있습니다. 확인 해주세요. :boom:
-
-          `git log --oneline --graph #{String.slice(success.pipeline["sha"], 0..10)}..#{
+          :boom: `#{branch}` 브랜치 빌드
+          :mag: 커밋 조회 - `git log --oneline --graph #{String.slice(success.pipeline["sha"], 0..10)}..#{
             String.slice(failed.pipeline["sha"], 0..10)
-          }` 명령으로 빌드에 영향을 준 커밋을 조회할 수 있습니다.
+          }`
           """
 
         success ->
-          ":tada: `#{branch}` 브랜치 빌드는 그린라이트 :tada:"
+          ":tada: `#{branch}` 브랜치 빌드는 그린라이트"
 
         true ->
           ""
@@ -152,61 +151,12 @@ defmodule SlackAdapter.Attachments do
   defp pipeline_common_attachment(%{pipeline: pipeline, commit: commit}) do
     base_url = Keyword.get(Application.get_env(:slab, :gitlab), :url) <> "/pipelines"
 
-    pipeline_info =
-      with finished when not is_nil(finished) <- pipeline["finished_at"],
-           {:ok, datetime, _} <- DateTime.from_iso8601(finished) do
-        finished_at =
-          datetime
-          |> Timex.Timezone.convert(Timex.Timezone.local())
-          |> DateTime.to_string()
-
-        %{
-          title: "pipeline finished",
-          value: finished_at,
-          short: true
-        }
-      else
-        _ -> nil
-      end
-
-    commit_info =
-      if commit do
-        %{
-          fields: [
-            %{
-              title: "commit id",
-              value: "#{String.slice(pipeline["sha"], 0..10)}",
-              short: true
-            },
-            %{
-              title: "commit title",
-              value: commit["title"],
-              short: true
-            },
-            %{
-              title: "commit author",
-              value: commit["author_name"],
-              short: true
-            }
-          ]
-        }
-      else
-        %{
-          fields: [
-            %{
-              title: "commit id",
-              value: "#{String.slice(pipeline["sha"], 0..10)}",
-              short: true
-            }
-          ]
-        }
-      end
-
-    fields =
-      if pipeline_info do
-        Map.update!(commit_info, :fields, fn old -> old ++ [pipeline_info] end)
-      else
-        commit_info
+    commit_author =
+      commit
+      |> get_in(["author_name"])
+      |> case do
+        nil -> ""
+        author -> ", author(#{author})"
       end
 
     {status_title, color} =
@@ -217,10 +167,10 @@ defmodule SlackAdapter.Attachments do
         _ -> {"", "#939393"}
       end
 
-    Map.merge(fields, %{
+    %{
       color: "#{color}",
-      title: "#{status_title} - #{pipeline["id"]}",
+      title: "#{status_title} - #{pipeline["id"]}#{commit_author}",
       title_link: "#{base_url}/#{pipeline["id"]}"
-    })
+    }
   end
 end
